put the sidebar on all pages

--- a/index.html
+++ b/index.html
@@ -20,60 +20,82 @@
         <li class='contact'>contact</li>
       </ul>
     </nav>
-    <div id='main'>
-      <div id='news'>
-        <div id='sidebar'>
-          <!-- / fb iframe -->
-          <p>
-            <iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcoolingtowersmusic&amp;send=false&amp;layout=standard&amp;width=320&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font=lucida+grande&amp;height=65" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:320px; height:65px;" allowTransparency="true"></iframe>
-          </p>
-          <p id='mailchump'>
-            <!-- Begin MailChimp Signup Form -->
-            <div id="mc_embed_signup">
-            <form action="http://coolingtowers.us5.list-manage1.com/subscribe/post?u=f122dd54a2bb389a7b9321753&amp;id=233dd1cdd3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-            <label for="mce-EMAIL">Subscribe to our mailing list!</label>
-            <input id="mailchimp-email" type="email" value="" placeholder="you@example.com" name="EMAIL" class="email" required>
-            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-            </form>
-            </div>
-          </p>
-          <p>
-            "Candy Beach" at the Rumble
-            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/MjoXKLDH6Lk" frameborder="0" allowfullscreen></iframe>
-          </p>
-          <p>
-            "Hard Headed Woman" at the Rumble
-            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/btw4D45mDqc" frameborder="0" allowfullscreen></iframe>
-          </p>
-          <p>
-            "Kevlar Vest" at the Rumble
-            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/DJmwpTpfugw" frameborder="0" allowfullscreen></iframe>
-          </p>
-          <p>
-            "Charlotte" at the Rumble
-            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/uER7Lf2nXjU" frameborder="0" allowfullscreen></iframe>
-          </p>
-          <p>
-            "Apple Martin" at the Rumble
-            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/HrrpDXRoKBo" frameborder="0" allowfullscreen></iframe>
-          </p>
-          <p>
-            "Charlotte" and "Lead Suitcase"
-            <br />
-            at Great Scott, 26 Jan 2011
-            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/LRkIZlWbyQw" frameborder="0" allowfullscreen></iframe>
-          </p>
-          <p>
-            "Chelsea Girls" at TT's, 19 Jan 2011
-            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/Stq_W-RCUrw" frameborder="0" allowfullscreen></iframe>
-          </p>
+    <div id='sidebar'>
+      <!-- / fb iframe -->
+      <p>
+        <iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcoolingtowersmusic&amp;send=false&amp;layout=standard&amp;width=320&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font=lucida+grande&amp;height=65" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:320px; height:65px;" allowTransparency="true"></iframe>
+      </p>
+      <p id='mailchump'>
+        <!-- Begin MailChimp Signup Form -->
+        <div id="mc_embed_signup">
+        <form action="http://coolingtowers.us5.list-manage1.com/subscribe/post?u=f122dd54a2bb389a7b9321753&amp;id=233dd1cdd3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+        <label for="mce-EMAIL">Subscribe to our mailing list!</label>
+        <input id="mailchimp-email" type="email" value="" placeholder="you@example.com" name="EMAIL" class="email" required>
+        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+        </form>
         </div>
-        <div class='hidden' id='content'></div>
+      </p>
+      <p>
+        "Candy Beach" at the Rumble
+        <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/MjoXKLDH6Lk" frameborder="0" allowfullscreen></iframe>
+      </p>
+      <p>
+        "Hard Headed Woman" at the Rumble
+        <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/btw4D45mDqc" frameborder="0" allowfullscreen></iframe>
+      </p>
+      <p>
+        "Kevlar Vest" at the Rumble
+        <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/DJmwpTpfugw" frameborder="0" allowfullscreen></iframe>
+      </p>
+      <p>
+        "Charlotte" at the Rumble
+        <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/uER7Lf2nXjU" frameborder="0" allowfullscreen></iframe>
+      </p>
+      <p>
+        "Apple Martin" at the Rumble
+        <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/HrrpDXRoKBo" frameborder="0" allowfullscreen></iframe>
+      </p>
+      <p>
+        "Charlotte" and "Lead Suitcase"
+        <br />
+        at Great Scott, 26 Jan 2011
+        <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/LRkIZlWbyQw" frameborder="0" allowfullscreen></iframe>
+      </p>
+      <p>
+        "Chelsea Girls" at TT's, 19 Jan 2011
+        <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/Stq_W-RCUrw" frameborder="0" allowfullscreen></iframe>
+      </p>
+    </div>
+    <div id='main'>
+      <div class='hidden' id='news'>
+        <div id='content'></div>
       </div>
       <div class='hidden' id='bio'>
         <a href='images/press/201202-coolingtowers-2400x1350.jpg' target='_blank'>
-          <img align='left' src='images/press/201202-coolingtowers-400x225.jpg' />
+          <img align='center' alt='Cooling Towers in Niner Bravo' class='bandpic' src='images/press/201202-coolingtowers-400x225.jpg' />
         </a>
+        <div id='lineup'>
+          <div class='member'>
+            <div class='name'>Commodore Vic</div>
+            <div class='role'>vocals</div>
+          </div>
+          <div class='member'>
+            <div class='name'>Ronan Fahy</div>
+            <div class='role'>guitar</div>
+          </div>
+          <div class='member'>
+            <div class='name'>Judy Margo</div>
+            <div class='role'>keyboard</div>
+          </div>
+          <div class='member'>
+            <div class='name'>Eric Donohue</div>
+            <div class='role'>bass</div>
+          </div>
+          <div class='member'>
+            <div class='name'>Pete Gamache</div>
+            <div class='role'>drums</div>
+          </div>
+        </div>
         <p>
           Formed in the spring of 2010 by guitarist Ronan Fahy and singer
           Commodore Vic, Cooling Towers has since garnered a healthy dose of
@@ -99,7 +121,7 @@
           up a collection of tracks with producer Darron Burke of Make Shift
           Studio, set to be released this spring.
         </p>
-        <img src='images/ctlooksright-940x188.jpg' />
+        <!-- / %img(src='images/ctlooksright-940x188.jpg') -->
       </div>
       <div class='hidden' id='shows'>
         <div class='show'>
@@ -177,7 +199,7 @@
       </div>
       <div class='hidden' id='audio'>
         <div id='tracks'><!-- populated by javascript --></div>
-        <img src='images/ctlooksmostlyright-940x188.jpg' />
+        <!-- / %img(src='images/ctlooksmostlyright-940x188.jpg') -->
       </div>
       <div class='hidden' id='pics'>
 <div id="controls"></div>
@@ -329,7 +351,7 @@
           <a href='http://www.reverbnation.com/coolingtowers' target='_blank'>reverbnation.com/coolingtowers</a>
         </p>
         <br />
-        <img src='images/press/201202-fiveheads-940x188.jpg' usemap='#fiveheadsmap' />
+        <!-- /%img(src='images/press/201202-fiveheads-940x188.jpg' usemap="#fiveheadsmap") -->
         <map name='fiveheadsmap'>
           <area coords='0,0,188,188' href='mailto:ronan@coolingtowers.us' shape='rect' />
           <area coords='188,0,376,188' href='mailto:judy@coolingtowers.us' shape='rect' />
